# lazy-rabbit-agent

./: .env.example  .env.sample  .gitignore  Makefile  README.md  env.sample  pyproject.toml  requirements.txt  start.sh  stop.sh
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  venv
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_cities_table.py  003_add_user_profile.py  004_add_recommendations_table.py  005_add_chat_tables.py  006_add_learning_records.py  007_add_notes_tasks_reminders.py  008_add_medical_paper_tables.py  009_add_ai_coach_tables.py  010_add_llm_settings_table.py  0110d4d0da9b_add_send_type_to_email_logs.py  1526ee29b8ab_add_role_permission_tables.py  559cf5fb5d4b_add_email_preferences.py  5d5f13a21dbc_add_forecast_date_to_recommendations.py  daa091af06f2_add_email_logs_table.py  f652314fb150_add_user_roles.py
backend/app/: Dockerfile  PROMPTS_README.md  __init__.py  database.py  init_db.py  main.py  prompts.yaml  start_worker.sh  startup.sh
backend/app/agile/: domain.py  forms.py  routes.py  worker.py
backend/app/api/: deps.py  domains.py  models.py  routes.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: admin.py  admin_recommendations.py  auth.py  backup.py  cities.py  coach.py  emails.py  knowledge.py  learning.py  llm_settings.py  medical_paper.py  philosophy.py  rbac.py  recommendations.py  scheduled.py  secretary.py  translation.py  users.py  weather.py  ws_chat.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/engine/: workflow_engine.py
backend/app/models/: __init__.py  chat_message.py  chat_session.py  city.py  email_log.py  knowledge_document.py  learning_goal.py  learning_record.py  llm_settings.py  medical_paper.py  note.py  permission.py  recommendation.py  reminder.py  role.py  role_permission.py  study_session.py  task.py  user.py
backend/app/prompt/: domain.py  models.py  routes.py
backend/app/schemas/: auth.py  chat.py  city.py  coach.py  email.py  knowledge.py  learning_goal.py  learning_record.py  llm_settings.py  medical_paper.py  philosophy.py  rbac.py  recommendation.py  streaming.py  translation.py  user.py  weather.py
backend/app/scripts/: reset_password.py  seed_rbac.py
backend/app/service/: async_llm_client.py  llm_client.py  llm_service.py  prompt_template.yaml  prompt_template.yml  siliconflow.py  task_handler.py  text2sql.py
backend/app/services/: backup_service.py  cache_service.py  chat_service.py  city_service.py  coach_service.py  email_service.py  email_template_service.py  learning_record_service.py  note_service.py  permission_service.py  prompt_service.py  rbac_service.py  recommendation_service.py  reminder_service.py  scheduled_email_service.py  scheduled_jobs.py  scheduler.py  streaming_recommendation_service.py  task_service.py  user_service.py
backend/app/services/llm/: __init__.py  base.py  openai_compatible.py  provider_factory.py
backend/app/services/medical_paper_agent/: __init__.py  a2a.py  metrics.py  prompt_loader.py  state.py  supervisor.py  workflow.py
backend/app/services/medical_paper_agent/prompts/: __init__.py
backend/app/services/medical_paper_agent/prompts/schemas/: a2a_message.v1.json
backend/app/services/medical_paper_agent/sub_agents/: __init__.py  compliance.py  literature.py  stats.py  writer.py
backend/app/services/medical_paper_agent/tools/: __init__.py  compliance_tools.py  literature_tools.py  stats_tools.py  writing_tools.py
backend/app/services/philosophy_master_agent/: __init__.py  service.py
backend/app/services/rag/: __init__.py  engine.py  vector_store.py
backend/app/services/secretary_agent/: __init__.py  a2a.py  agent.py  metrics.py  tracing.py
backend/app/services/secretary_agent/prompts/: __init__.py  article_tools.yaml  coach.yaml  learning_tools.yaml  sub_agents.yaml  system.yaml  utility_tools.yaml
backend/app/services/secretary_agent/sub_agents/: __init__.py  coach.py  learning.py  productivity.py  utility.py
backend/app/services/secretary_agent/tools/: __init__.py  article_processor.py  calculator_tool.py  coach_tools.py  datetime_tool.py  learning_tools.py  note_tool.py  plantuml_renderer.py  reminder_tool.py  save_learning_tool.py  task_tool.py  weather_tool.py
backend/app/services/translation/: __init__.py  service.py
backend/app/services/weather/: __init__.py  base.py  gaode_provider.py  provider_factory.py  weather_helper.py
backend/app/static/: package-lock.json  styles.css
backend/app/static/templates/: base.html
backend/app/templates/: about.html  base.html  footer.html  index.html  test.html
backend/app/templates/emails/: recommendation.html  recommendation_multi_day.html
backend/app/user/: auth.py  crud.py  domain.py  models.py  routes.py
backend/app/util/: agent_logger.py  common_util.py  http_util.py  ws_util.py  yaml_config.py
backend/app/worker/: celery_app.py  celery_worker.py
backend/data/chroma/: chroma.sqlite3
backend/scripts/: import_cities.py
backend/src/: kg_service.py
backend/tests/: __init__.py  conftest.py  test_a2a_contract.py  test_additional_tools.py  test_article_pipeline.py  test_auth.py  test_backend_implementation.py  test_chat_models.py  test_chat_service.py  test_coach_agent.py  test_coach_api.py  test_compliance_agent.py  test_compliance_tools.py  test_env_discovery.py  test_knowledge_api.py  test_learning_service.py  test_literature_agent.py  test_literature_tools.py  test_medical_paper_api.py  test_medical_paper_metrics.py  test_medical_paper_models.py  test_medical_paper_workflow.py  test_metrics.py  test_multi_agent_architecture.py  test_phase1_acceptance.py  test_phase2_acceptance.py  test_phase3_acceptance.py  test_philosophy_api.py  test_prompts.py  test_scheduler.py  test_secretary_api.py  test_stats_agent.py  test_stats_tools.py  test_tracing.py  test_translation_api.py  test_translation_service.py  test_users.py  test_utility_tools.py  test_writer_agent.py  test_writing_tools.py
backend/tests/data/chroma/: chroma.sqlite3
(+297 files in other folders)
