[tool.poetry]
name = "lazy-rabbit-agent"
version = "0.1.0"
description = "AI-powered personalized AI recommendation server"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.1.0"
python-multipart = "^0.0.6"
alembic = "^1.13.0"
email-validator = "^2.1.0"
httpx = ">=0.27.0"
cachetools = "^5.3.0"
instructor = "^1.7.0"
openai = "^1.50.0"
aiosmtplib = "^3.0.0"
jinja2 = "^3.1.0"
pyyaml = "^6.0.0"
# LangChain + LangGraph for multi-agent workflow
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-core = "^0.3.0"
langgraph = "^0.2.0"
# Scheduler
apscheduler = "^3.10.0"
# Article processing
trafilatura = "^1.6.0"
pypdf = ">=5.1.0,<7"
# Prometheus metrics
prometheus-client = "^0.19.0"
# Medical paper agent dependencies
biopython = "^1.83"
scipy = "^1.12.0"
statsmodels = "^0.14.0"
# RAG knowledge base: embeddings
llama-index-embeddings-openai = ">=0.3.0"
# RAG: pgvector backend (recommended for PostgreSQL)
pgvector = ">=0.3.0"
psycopg2-binary = {version = ">=2.9.0", optional = true}
# RAG: ChromaDB backend (optional, for development / SQLite-only setups)
chromadb = {version = ">=0.5.0,<1.0.0", optional = true}
# LlamaIndex additional packages (optional)
llama-index = {version = ">=0.12.0,<0.15.0", optional = true}
llama-index-llms-openai = {version = ">=0.5.0", optional = true}
llama-index-vector-stores-chroma = {version = ">=0.4.0", optional = true}
llama-index-readers-file = {version = ">=0.4.0", optional = true}

[tool.poetry.extras]
chromadb = ["chromadb", "llama-index", "llama-index-llms-openai", "llama-index-vector-stores-chroma", "llama-index-readers-file"]
postgres = ["psycopg2-binary"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "alembic",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["alembic"]

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bcrypt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "trafilatura.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "instructor.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langgraph.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "Bio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "statsmodels.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "llama_index.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chromadb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


